# ez-input

./: .gitignore  CMakeLists.txt  README.md  preconfig.cmake
cmake/: preconfig.cmake
include/ez/input/: InputEngine.hpp  InputEvent.hpp  InputState.hpp  Joystick.hpp  Key.hpp  KeyMap.hpp  KeyMods.hpp  Mouse.hpp  Operator.hpp  OperatorRegistry.hpp
include/ez/input/compat/: GLFW.hpp  Godot.hpp  Gtk.hpp  ImguiCompat.hpp  SDL2.hpp  SFML.hpp
include/ez/input/intern/: enumerations.hpp
src/: InputEngine.cpp  InputEvent.cpp  InputState.cpp  Key.cpp  KeyMap.cpp  KeyMods.cpp  Mouse.cpp  enumerations.cpp
tests/: CMakeLists.txt
tests/format/: main.cpp
tests/operator/: main.cpp
tests/sdl/: main.cpp
tests/sfml/: main.cpp
